update with new framework

--- a/requirements.txt
+++ b/requirements.txt
@@ -20,3 +20,12 @@ email_validator
 
 #hashing              #new
 'passlib[bcrypt]'
+
+#for creating jwt tokens
+python-jose
+
+#for  cleaning up codebase on each commit
+pre-commit
+
+#for accessing form data       #new
+python-multipart
